--- a/Frontend/wildwavesurfapp/src/components/item/item.css
+++ b/Frontend/wildwavesurfapp/src/components/item/item.css
@@ -70,3 +70,9 @@
   align-items: center;
   width: 95%;
 }
+
+@media (max-width:533px){
+  .product-container{
+    display: initial;
+  }
+}
